--- a/languages/es.json
+++ b/languages/es.json
@@ -8,6 +8,9 @@
     "menu6": "Automatización",
     "menu7": "Nosotros",
     "menu8": "Contacto",
+    "menu9": "Proyectos",
+    "menu10": "Seguridad",
+    "menu11": "Proveedores",
     "titulo1": "INOX · ALUMINIO · ACERO · MONTAJE",
     "titulo2": "Soldadura Especializada",
     "slide1_title": "Linea de ensambaje",
@@ -32,10 +35,10 @@
     "tile9": "Audi",
     "tile10": "VW Puebla",
     "tile11": "En áltas temperaturas",
-    "contact1": "Llámanos: 222 230 43 70",
+    "contactx1": "Llámanos: 222 230 43 70",
     "legend1": "Nuestros principales clientes avalan nuestra calidad y compromiso.",
     "legend2": "Nuestra plantilla humana se especializa día con día y nuestra maquinaria y equipo son de vanguardia tecnológica, respondemos a sus necesidades técnicas",
-    "legend2_link": "Conócenos.",
+    "legend2_link": " Conócenos.",
     "legend3": "Cubrimos todas las necesidades de Mantenimiento.",
     "legend4_1": "Todo el sistema de montaje se limpia e inspecciona periódicamente según las necesidades del cliente y la carga de trabajo permitiendo con ello detectar posibles fallas o piezas desgastadas programando con tiempo la solución y optimizando al máximo los equipos.",
     "legend4_2": "El servicio continuo de mantenimiento permite prolongar la vida de los equipos, detectar futuras fallas propias del desgaste por el continuo trabajo.",
@@ -56,7 +59,7 @@
     "mig_bread_2": "MIG/MAG",
     "mig_title1": "La mejor apariencia y acabado",
     "mig_subtitle1": "Alta productividad",
-    "mig_share_title": "¡Comparte esto!",
+    "mig_share_title": "Descarga para más imformación",
     "mig_title2": "Qué es el sistema MIG/MAG?",
     "mig_p1_1": "La soldadura MIG/MAG es un proceso por arco bajo gas protector con electrodo consumible, el arco se produce mediante un electrodo formado por un hilo continuo y unas piezas a unir, quedando este protegido de la atmosfera circundante por un gas inerte (soldadura MIG) o por un gas activo (soldadura MAG). ",
     "mig_p1_2": "La soldadura MIG/MAG es un proceso versátil, pudiendo depositar el metal a una gran velocidad y en todas las posiciones, este procedimiento es muy utilizado en espesores pequeños y medios en estructuras de acero y aleaciones de aluminio, especialmente donde se requiere una gran trabajo manual. ",
@@ -121,5 +124,55 @@
     "calor_p1": "Este tipo de trabajo permite hacer inspecciones y reparaciones a equipos que trabajan a altas temperaturas como hornos y cabinas sin necesidad de apagar o reducir su temperatura, permitiéndole mantener su ritmo de producción y su productividad. ",
     "calor_title3": "Conóce nuestro trabajo con Cementos Argos",
     "calor_title4": "Otros trabajos realizados:",
-    "calor_share": "¡Comparte esto!"
+    "calor_share": "¡Comparte esto!",
+    "mision_01": "Misión",
+    "mision_02": "Llevar la máxima calidad en soluciones innovadoras en la fabricación, montaje y mantenimiento s nuestros clientes en el sector industrial y privado, con los mejores materiales disponiblesa nivel mundial.",
+    "vision_01": "Visión",
+    "vision_02": "Consolidamos como la mejor y más confiable opción en el mercado de América.",
+    "vision_03": "Además de ser un importante proveedor para el sector industrial de México, I.A.F.M. encamina también sus esfuerzos en cubrir las necesidades del sector Comercial y Residencial, ofreciendo productos manufacturados con la más alta tecnología y el más alto estándar internacional de calidad que demanda la industria automotríz y cementera del mundo",
+    "seguridad_01": "I.A.F.M. es una empresa comprometida con la seguridad industrial, salud, ocupación y protección ambiental. Por eso es que le brinda cualquier tipo de servicio relacionado con la seguridad, contamos con personal sumamente capacitado para cualquier trabajo desde especialistas en:",
+    "seguridad_02": "Pilas / Pilotes",
+    "seguridad_03": "Obra civil ",
+    "seguridad_04": "Soldadura y Paileria",
+    "seguridad_05": "Mantenimiento de cilindros sujetos a presión",
+    "seguridad_06": "Instrumentación",
+    "seguridad_07": "Trabajo eléctricos",
+    "seguridad_08": "Uso y manejo de residuos peligrosos",
+    "seguridad_09": "Nuestro equipo se conforma por: ",
+    "seguridad_10": "Técnicos en seguridad Industrial",
+    "seguridad_11": "Técnicos en urgencias médicas",
+    "seguridad_12": "Doctores en salud ocupacional",
+    "seguridad_13": "Ingenieros ambientales",
+    "seguridad_14": "También le brindamos asesoría y capacitaciones avalados por las NOM-STPS. Los cursos disponibles: ",
+    "seguridad_15": "Formación y funcionamiento de la brigada de evacuación.",
+    "seguridad_16": "5S Orden y limpieza",
+    "seguridad_17": "Servicios preventivos en materia de seguridad y salud en el trabajo NOM-030-STPS-2009",
+    "seguridad_18": "Mantenimiento de las instalaciones eléctricas",
+    "seguridad_19": "Seguridad en corte y soldadura ",
+    "seguridad_20": "Correcta interpretación de los elementos de señalización del centro de trabajo ",
+    "seguridad_21": "Riesgos por electricidad estática",
+    "seguridad_22": "Funciones y responsabilidad de la comisión de seguridad e higiene ",
+    "seguridad_23": "Comunicación de peligros y riesgos químicos ",
+    "seguridad_24": "Uso, revisión, reposición, limpieza, limitaciones, mantenimiento, resguardo y disposición final del EPP.",
+    "seguridad_25": "Alteraciones a la salud generadas por el ruido ",
+    "seguridad_26": "Rescate en trabajos en alturas",
+    "seguridad_27": "Seguridad en trabajos en alturas",
+    "seguridad_28": "Manejo, transporte y almacenamiento de sustancias químicas peligrosas ",
+    "seguridad_29": "Formación de brigada de primeros auxilios ",
+    "seguridad_30": "Uso seguro de herramientas",
+    "seguridad_31": "Operación segura de maquinaria y equipo",
+    "seguridad_32": "Prevención y protección de incendio y combate de conatos e incendios ",
+    "seguridad_33": "Equipos de elevación ",
+    "seguridad_34": "Operación segura de montacargas ",
+    "seguridad_35": "Operación segura de gruas ",
+    "seguridad_36": "Seguridad",
+    "seguridad_37": "Higiene",
+    "seguridad_38": "Seguridad Industrial",
+    "auto_1": "Somos una empresa dedicada al servicio técnico, asesoría y desarrollo de proyectos de automatización y control de procesos industriales conformada por profesionales en el ramo",
+    "auto_2": "Trabajar en conjunto con nuestros clientes para desarrollar soluciones para sistemas de automatización y control que ayuden a incrementar su potencial con tecnología de punta y el mejor recurso humano.",
+    "auto_3": "Ser una empresa líder en soluciones de automatización y control de procesos para ser considerados por nuestros clientes como un proveedor confiable",
+    "auto_4": "Proyectos de Automatización",
+    "auto_5": "Procesos de Automatización",
+    "audi_1": "Montaje de línea de producción en carrocería para la Q5.",
+    "vw_1": "Montaje de linea de producción para Jeta A6 y Golf A7."
 }
